--- a/app/src/main/res/layout/ranking_vendedores_list.xml
+++ b/app/src/main/res/layout/ranking_vendedores_list.xml
@@ -28,10 +28,16 @@
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintTop_toBottomOf="@+id/nickVendedorR" android:layout_marginTop="32dp"/>
+
     <ImageView
-            android:layout_width="31dp"
-            android:layout_height="55dp" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/topBadge" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+        android:id="@+id/topBadge"
+        android:layout_width="31dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/top_badge" />
 </androidx.constraintlayout.widget.ConstraintLayout>
