--- a/app/src/main/res/layout/content_comunidade.xml
+++ b/app/src/main/res/layout/content_comunidade.xml
@@ -59,8 +59,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagemCmm" />
 
-    <ListView
-        android:id="@+id/listTopicos"
+    <ImageView
+        android:id="@+id/deleteCmm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descricaoCmm"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <TextView
+        android:id="@+id/addTopico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:singleLine="false"
+        android:text="Criar Tópico"
+        android:textColor="#139905"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagemCmm" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerTopicos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
