--- a/app/src/main/res/layout/content_topico.xml
+++ b/app/src/main/res/layout/content_topico.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tituloTopico" />
 
     <EditText
-        android:id="@+id/mensagem"
+        android:id="@+id/mensagemEnviar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/mensagem"
+        app:layout_constraintBottom_toTopOf="@+id/mensagemEnviar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider2" />
