--- a/app/src/main/res/layout/mensagens_topico.xml
+++ b/app/src/main/res/layout/mensagens_topico.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Usuário"
+        android:text="Usuário Não Encontrado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/msgFoto"
         app:layout_constraintTop_toTopOf="parent" />
