[WIP]fragment vendedor

--- a/app/src/main/res/layout/fragment_vendedor.xml
+++ b/app/src/main/res/layout/fragment_vendedor.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ImageView
-        android:id="@+id/fotoVendedor2"
+        android:id="@+id/fotoVendedor"
         android:layout_width="145dp"
         android:layout_height="145dp"
         android:layout_marginStart="8dp"
@@ -21,7 +21,7 @@
         app:srcCompat="@drawable/no_photo" />
 
     <TextView
-        android:id="@+id/vendedorNick2"
+        android:id="@+id/vendedorNick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,11 +31,11 @@
         android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fotoVendedor2"
+        app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nomeVendedor2"
+        android:id="@+id/nomeVendedor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -45,11 +45,11 @@
         android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fotoVendedor2"
-        app:layout_constraintTop_toBottomOf="@+id/vendedorNick2" />
+        app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
+        app:layout_constraintTop_toBottomOf="@+id/vendedorNick" />
 
     <TextView
-        android:id="@+id/notaVendedor2"
+        android:id="@+id/notaVendedor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -59,11 +59,11 @@
         android:layout_marginRight="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fotoVendedor2"
-        app:layout_constraintTop_toBottomOf="@+id/nomeVendedor2" />
+        app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
+        app:layout_constraintTop_toBottomOf="@+id/nomeVendedor" />
 
     <Button
-        android:id="@+id/anunciarProduto2"
+        android:id="@+id/anunciarProduto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -71,6 +71,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fotoVendedor2" />
+        app:layout_constraintTop_toBottomOf="@+id/fotoVendedor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
