--- a/app/src/main/res/layout/mensagens_topico.xml
+++ b/app/src/main/res/layout/mensagens_topico.xml
@@ -36,6 +36,7 @@
         android:id="@+id/divider4"
         android:layout_width="0dp"
         android:layout_height="2dp"
+        android:layout_marginTop="4dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
