--- a/app/src/main/res/layout/content_usuario.xml
+++ b/app/src/main/res/layout/content_usuario.xml
@@ -179,12 +179,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
                 android:text="ativar perfil de vendedor"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editarUsuario" />
+                app:layout_constraintTop_toBottomOf="@+id/acessarPerfilVendedor" />
 
             <TextView
                 android:id="@+id/msgCPF"
@@ -362,6 +361,17 @@
                 android:text="Excluir Perfil"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/usuarioCEP" />
+
+            <Button
+                android:id="@+id/acessarPerfilVendedor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Acessar perfil de vendedor"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editarUsuario" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
