--- a/app/src/main/res/layout/comunidades_list.xml
+++ b/app/src/main/res/layout/comunidades_list.xml
@@ -47,4 +47,18 @@
         app:layout_constraintStart_toEndOf="@+id/imagemComunidade"
         app:layout_constraintTop_toBottomOf="@+id/nomeComunidade" />
 
+    <View
+        android:id="@+id/divider9"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagemComunidade" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
