--- a/app/src/main/res/layout/fragment_vendedor.xml
+++ b/app/src/main/res/layout/fragment_vendedor.xml
@@ -22,13 +22,14 @@
 
     <TextView
         android:id="@+id/vendedorNick"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
@@ -36,13 +37,14 @@
 
     <TextView
         android:id="@+id/nomeVendedor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
@@ -50,17 +52,19 @@
 
     <TextView
         android:id="@+id/notaVendedor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
-        app:layout_constraintTop_toBottomOf="@+id/nomeVendedor" />
+        app:layout_constraintTop_toBottomOf="@+id/vendasVendedor" />
 
     <Button
         android:id="@+id/anunciarProduto"
@@ -72,5 +76,20 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fotoVendedor" />
+
+    <TextView
+        android:id="@+id/vendasVendedor"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
+        app:layout_constraintTop_toBottomOf="@+id/nomeVendedor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
