--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -48,7 +48,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="Nick"
+        android:hint="Nick ou Email"
         android:inputType="textPersonName"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,8 +65,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
         android:ems="10"
-        android:hint="Nick"
+        android:hint="Nick (apenas letras e números)"
         android:inputType="textPersonName"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
