--- a/app/src/main/res/layout/fragment_topicos.xml
+++ b/app/src/main/res/layout/fragment_topicos.xml
@@ -46,4 +46,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchTopicos" />
+
+    <TextView
+        android:id="@+id/emptyTopicos"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:text="Ainda não existem tópicos, crie o seu ;)"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTopicos" />
 </androidx.constraintlayout.widget.ConstraintLayout>
