--- a/app/src/main/res/layout/content_jogo.xml
+++ b/app/src/main/res/layout/content_jogo.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jogoNotaUsuarios" />
+        app:layout_constraintTop_toBottomOf="@+id/jogoPlataforma" />
 
     <TextView
         android:id="@+id/jogoNotaUsuarios"
@@ -57,7 +57,7 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jogoTitulo" />
+        app:layout_constraintTop_toBottomOf="@+id/jogoNotaMidia" />
 
     <Button
         android:id="@+id/darNotaJogo"
@@ -100,5 +100,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notaJogo" />
+
+    <TextView
+        android:id="@+id/jogoPlataforma"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jogoTitulo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
