[wip]shared preferences

--- a/app/src/main/res/layout/content_jogo.xml
+++ b/app/src/main/res/layout/content_jogo.xml
@@ -32,7 +32,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:gravity="center"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogoFoto" />
@@ -44,7 +43,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogoPlataforma" />
 
@@ -55,7 +53,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogoNotaMidia" />
 
@@ -67,7 +64,7 @@
         android:text="Dar nota ao jogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jogoNotaMidia" />
+        app:layout_constraintTop_toBottomOf="@+id/jogoNotaUsuarios" />
 
     <EditText
         android:id="@+id/notaJogo"
@@ -108,7 +105,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jogoTitulo" />
 
